[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/pos_to_players.gd" type="Script" id=1]

[node name="PlayerPos" type="Spatial"]
script = ExtResource( 1 )

[node name="Position3D" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 0, 10 )

[node name="Position3D2" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -10, 0, 10 )

[node name="Position3D3" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -10, 0, -10 )

[node name="Position3D4" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 0, -10 )
